Further updates to Fable version and allowed option of using either NPM or Yarn for managing JS dependencies

--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-    <title>SAFE Template</title>
+    <title>SAFE Dojo</title>
     <meta charset="utf-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
