--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>SAFE Template</title>
+    <title>SAFE Dojo</title>
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="/favicon.png"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
